--- a/css/styles.css
+++ b/css/styles.css
@@ -572,6 +572,10 @@ button:active {
   background: #ff4894a2;
 }
 
+button+button {
+  background: #777;
+}
+
 select {
   border-radius: 5px;
   width: 100%;
